# rust-grpc-cli

./: Cargo.toml
proto/: cli.proto
src/: main.rs
src/remotecli/: client.rs  server.rs
