[package]
name = "cli-grpc"
version = "0.1.0"
authors = ["Derek Barnes <derekb0147@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tonic = "0.3.0"
prost = "0.6"
tokio = { version = "0.2", features = ["full"] }

[build-dependencies]
tonic-build = "0.3.0"
